--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="container">
 
       <ul>
-        <li><a href="/appeal/appeal_theme/">Appeal</a></li>
-        <li><a href="/dynamism/">Dynamism</a></li>
-        <li><a href="/greenlife">Greenlife</a></li>
-        <li><a href="/kdesk">Knowledge Desk</a></li>
-        <li><a href="/petapalozza">Petapalozza</a></li>
-        <li><a href="/reddrop_buddies">Reddrop Buddies</a></li>
-        <li><a href="/restore">Restore</a></li>
-        <li><a href="/sharai_khana">Sharai Khana</a></li>
-        <li><a href="/srcare">Senior Care</a></li>
-        <li><a href="/wish">Wish</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/appeal/appeal_theme/index.html">Appeal</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/dynamism/index.html">Dynamism</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/greenlife/index.html">Greenlife</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/kdesk/index.html">Knowledge Desk</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/petapalozza/index.html">Petapalozza</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/reddrop_buddies/index.html">Reddrop Buddies</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/restore/index.html">Restore</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/sharai_khana/index.html">Sharai Khana</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/srcare/index.html">Senior Care</a></li>
+        <li><a href="https://xenioushk.github.io/docs-wp-themes/wish/index.html">Wish</a></li>
       </ul>
 
 
