- Update document index file.

--- a/index.html
+++ b/index.html
@@ -5,26 +5,56 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WordPress Themes Documentation</title>
-    <link href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
   </head>
   <body>
 
 
     <div class="container">
 
-      <ul>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/appeal/appeal_theme/index.html">Appeal</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/dynamism/index.html">Dynamism</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/greenlife/index.html">Greenlife</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/kdesk/index.html">Knowledge Desk</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/petapalozza/index.html">Petapalozza</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/reddrop_buddies/index.html">Reddrop Buddies</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/restore/index.html">Restore</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/sharai_khana/index.html">Sharai Khana</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/srcare/index.html">Senior Care</a></li>
-        <li><a href="https://xenioushk.github.io/docs-wp-themes/wish/index.html">Wish</a></li>
+      <h1 class="app__title">WordPress Themes Documentation</h1>
+
+      <ul class="items_list">
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/appeal/appeal_theme/index.html">Appeal</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/dynamism/index.html">Dynamism</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/greenlife/index.html">Greenlife</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/kdesk/index.html">Knowledge Desk</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/petapalozza/index.html">Petapalozza</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/reddrop_buddies/index.html">Reddrop Buddies</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/restore/index.html">Restore</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/sharai_khana/index.html">Sharai Khana</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/srcare/index.html">Senior Care</a>
+        </li>
+        <li>
+          <a href="https://xenioushk.github.io/docs-wp-themes/wish/index.html">Wish</a>
+        </li>
       </ul>
 
+
+      <div class="additional_links">
+        <span>More Documentation:</span>
+        <a href="https://xenioushk.github.io/docs-wp-plugins/" target="_blank" title="Our WordPress plugins documentation">WP Plugins</a>
+        <a href="https://xenioushk.github.io/docs-templates/" target="_blank" title="Our HTML5 web templates documentation">Templates</a>
+        <a href="https://xenioushk.github.io/docs-plugins-addon/" target="_blank" title="Our WordPress addons documentation">WP Addons</a>
+        <a href="https://github.com/xenioushk/" target="_blank" title="Md Mahbub Alam Khan's Github Profile">Github Profile</a>
+      </div>
 
     </div>
 
