--- a/srcare/index.html
+++ b/srcare/index.html
@@ -138,7 +138,7 @@
                   </nav>
                   <small>
                     <i>Doc Last Update:</i>
-                    18/12/2022</small>
+                    04/06/2023</small>
                 </nav>
 
               </div>
@@ -153,9 +153,9 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20221218-1.3.1</li>
+                        20230604-1.3.2</li>
                       <li>
-                        <strong>Recent Update:</strong>18/12/2022</li>
+                        <strong>Recent Update:</strong>04/06/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         21/08/2018</li>
@@ -2672,7 +2672,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.0 to 1.3.1</b>
+                          <b>Upgrading from 1.3.1 to 1.3.2</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your <strong>themes/senior-care</strong> folder.</li>
@@ -2689,6 +2689,15 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <p><b>2023, June, 18 - v 1.3.2</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                          <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
 
                         <p><b>2022, December, 18 - v 1.3.1</b></p>
                         <ul class="simple-list">
