--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -149,7 +149,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    04/01/2023</small>
+                    04/06/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -164,10 +164,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230104-1.3.0</li>
+                        20230604-1.3.1</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        04/01/2023</li>
+                        04/06/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         09/02/2018</li>
@@ -3320,7 +3320,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.9 to 1.3.0</b>
+                          <b>Upgrading from 1.3.0 to 1.3.1</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your
@@ -3339,6 +3339,15 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <p><b>2023, June, 18 - v 1.3.2</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                          <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
 
                         <p>
                           <b>2023, January, 04 - v 1.3.0</b>
