--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -146,7 +146,7 @@
                   </nav>
                   <!--//nav-->
 
-                  <small><i>Doc Last Update:</i> 16/10/2022</small>
+                  <small><i>Doc Last Update:</i> 04/06/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -161,8 +161,8 @@
                   <h2 class="section-title">Theme's General Information</h2>
                   <div class="section-block">
                     <ul class="square-list">
-                      <li><strong>Version:</strong> 20221016-1.3.1</li>
-                      <li><strong>Recent Update:</strong> 16/10/2022</li>
+                      <li><strong>Version:</strong> 20230604-1.3.2</li>
+                      <li><strong>Recent Update:</strong> 04/06/2023</li>
                       <li><strong>Release Date:</strong> 20/05/2017</li>
                       <li><strong>Premium Support:</strong> <a href="https://themeforest.net/item/knowledgedesk-knowledge-base-wordpress-theme/19481432/support/contact" target="_blank">Send Message</a></li>
                       <li><strong>Theme Created By</strong> <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a> & <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a></li>
@@ -2131,7 +2131,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.2.9 to 1.3.0</b>
+                          <b>Upgrading from 1.3.1 to 1.3.2</b>
                         </p>
 
                         <ul>
@@ -2149,6 +2149,19 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <p><b>2023, June, 04 - v 1.3.2</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                          <li><b>- Updated:</b> BWl Knowledge Base Manager Plugin to 1.4.1</li>
+                          <li><b>- Updated:</b> Ultimate Searchable Accordion - WPBakery Page Builder Addon 1.1.6</li>
+                          <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
+
+
                         <p><b>2022, October, 16 - v 1.3.1</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.10.0</li>
