--- a/reddrop_buddies/index.html
+++ b/reddrop_buddies/index.html
@@ -192,7 +192,7 @@
                   <div id="requirements" class="section-block">
                     <h3 class="block-title">Installation Requirements</h3>
                     <p>You need at least WordPress version 4.7+ installed for this theme to work properly. It is strongly recommended that you always use the latest stable version of WordPress to ensure all known bugs and security issues
-                                                                                                                                                                                                                                              are fixed. Other requirements:</p>
+                                                                                                                                                                                                                                                                                                                                                                                                        are fixed. Other requirements:</p>
                     <ul>
                       <li>PHP version 5.3 or greater.</li>
                       <li>MySQL version 5.0.15 or greater.</li>
@@ -354,7 +354,7 @@
                       <div class="col-md-12 col-12">
                         <h3 class="block-title">Child Theme Installation</h3>
                         <p>The Installation process of a child theme is similar to the parent WordPress theme. Please note that the A Child theme is often used by the developers who want to override/extend a theme's features or functionalities
-                                                                                                                                                                                                                                                                                          without changing the parent theme's codes. You will get the child theme zip file inside the theme package.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                without changing the parent theme's codes. You will get the child theme zip file inside the theme package.</p>
 
                         <div class="doc-img-box text-left">
                           <a href="img/installation/child_theme/1.jpg" class="venobox">
@@ -393,7 +393,7 @@
                         <p>Usually, creating a website from the beginning is a time-consuming and challenging process. The theme comes with the most popular
                           <strong>'One Click Demo Installation'</strong>
                           feature, which allows you to get
-                                                                                                                                                                                                                                                                                          the site ready precisely like the theme demo within a few minutes.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                the site ready precisely like the theme demo within a few minutes.</p>
 
                         <p>
                           <strong class="steps">Few Important Notes:</strong>
@@ -404,7 +404,7 @@
                             in your site.</li>
                           <li>Your previous data and settings may be removed or modified after importing demo data. So, we profoundly recommend importing demo data in a fresh WordPress site.</li>
                           <li>It may take a bit long time to import all the images and demo data from our server. So, please keep patience while importing process is running in your site. In general case, It will not take more than 3-5
-                                                                                                                                                                                                                                                                                                                minutes.</li>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    minutes.</li>
                           <li>You can deactivate
                             <strong>One Click Demo Import</strong>
                             plugin after completing import task.</li>
@@ -556,7 +556,7 @@
                           You can also upload custom icon( Recommended size is 64x64 and file type in
                           <strong>GIF</strong>
                           format. ) and set custom background color for the preloadscreen. Finally,
-                                                                                                                                                                                                                                                                                          click
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                click
                           <strong>Save Changes</strong>
                           button to save the settings.</p>
 
@@ -789,7 +789,7 @@
                         <p>
                           <strong class="steps">Step 02:</strong>
                           You can set body background, fonts, text size, link colors according to your requirements. Also, you can manage heading(h1,h2,h3,h4,h5,h6) color and font size. You can
-                                                                                                                                                                                                                                                                                          set theme sidebar(widget) background and fonts from body styling section.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                set theme sidebar(widget) background and fonts from body styling section.</p>
 
                         <p>
                           <strong class="steps">Step 03:</strong>
@@ -1351,7 +1351,7 @@
                   <p>Check the different part creation/editing process (Home, Pages- About Us, Contact Us Etc.)</p>
                   <p>The following part of the documentation consider that you already read (if not then it is strongly recommend that you read them first) the
                     <em>documentation of WPBakery Page Builder</em>. It is available in the documentation
-                                                                                                                                                                                                                                          folder and can able to
+                                                                                                                                                                                                                                                                                                                                                                                                    folder and can able to
                     <em>use drag n drop page builder</em>
                     etc.</p>
 
@@ -1376,7 +1376,7 @@
                           from the
                           <em>Template</em>
                           selection dropdown.
-                                                                                                                                                                                                                                                                                          From The right side
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                From The right side
                           <em>Page Layout Settings</em>
                           select
                           <em>"WPBakery Page Builder Layout?" to "Yes"</em>.</p>
@@ -1419,7 +1419,7 @@
                           <strong class="steps">Step 06:</strong>
                           In the One Page's different Row's we added different VC Elements<em>
                             Scare Button, Scare Heading, Scare Highlights, Scare Slider, Scare Team, Scare Testimonial etc</em>.
-                                                                                                                                                                                                                                                                                                            You can also add different WPBakery Page Builder elements as well in other different rows according to your needs.</p>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                You can also add different WPBakery Page Builder elements as well in other different rows according to your needs.</p>
 
                         <div class="doc-img-box">
                           <a href="img/06_3.jpg" class="venobox">
@@ -1475,7 +1475,7 @@
                           from the
                           <em>Template</em>
                           selection dropdown.
-                                                                                                                                                                                                                                                                                          From The right side
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                From The right side
                           <em>Page Layout Settings</em>
                           select
                           <em>"WPBakery Page Builder Layout?" to "Yes"</em>
@@ -1678,7 +1678,7 @@
                           from the
                           <em>Template</em>
                           selection dropdown.
-                                                                                                                                                                                                                                                                                          From The right side
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                From The right side
                           <em>Page Layout Settings</em>
                           select
                           <em>"WPBakery Page Builder Layout?" to "Yes"</em>.</p>
@@ -2264,19 +2264,25 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
 
-                        <p>
-                          <b>2023, January, 08 - v 1.3.0</b>
-                        </p>
-    
+                        <p><b>2023, June, 07 - v 1.3.1</b></p>
                         <ul class="simple-list">
-                          <li><b>- Updated:</b> Woocommerce product-searchform.php template</li>
-                          <li><b>- Updated:</b> Theme for WP version 6.1.1</li>
-                          <li><b>- Updated:</b> WPBakery Page Builder to 6.10.0</li>
-                          <li><b>- Updated:</b> Reddrop Buddies WPBakery Page Builder to 1.2.0</li>
-                          <li><b>- Updated:</b> Theme options panel.</li>
+                          <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
-                      </ul>
+                        </ul>
+
+                        <p><b>2023, January, 08 - v 1.3.0</b></p>
+    
+                        <ul class="simple-list">
+                            <li><b>- Updated:</b> Woocommerce product-searchform.php template</li>
+                            <li><b>- Updated:</b> Theme for WP version 6.1.1</li>
+                            <li><b>- Updated:</b> WPBakery Page Builder to 6.10.0</li>
+                            <li><b>- Updated:</b> Reddrop Buddies WPBakery Page Builder to 1.2.0</li>
+                            <li><b>- Updated:</b> Theme options panel.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
 
                         <p><b>2022, June, 08 - v 1.2.9</b></p>
                         <ul class="simple-list">
