--- a/petapalozza/index.html
+++ b/petapalozza/index.html
@@ -138,7 +138,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    05/01/2023</small>
+                    08/06/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -153,10 +153,10 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230105-1.2.1</li>
+                        20230608-1.2.2</li>
                       <li>
                         <strong>Recent Update:</strong>
-                        05/01/2023</li>
+                        08/06/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         20/11/2017</li>
@@ -190,9 +190,9 @@
                 <section id="installation-section" class="doc-section">
                   <div class="section-block" id="requirements">
                     <h3 class="block-title">Requirements</h3>
-                    <p>You need at least WordPress version 4.8+ installed for this theme to work properly. It is strongly recommended that you always use the latest stable version of WordPress to ensure all known bugs and security issues are fixed. Other requirements:</p>
+                    <p>You need at least WordPress version 5.8+ installed for this theme to work properly. It is strongly recommended that you always use the latest stable version of WordPress to ensure all known bugs and security issues are fixed. Other requirements:</p>
                     <ul>
-                      <li>PHP version 5.3 or greater.</li>
+                      <li>PHP version 7.3 or greater.</li>
                       <li>MySQL version 5.0.15 or greater.</li>
                     </ul>
                   </div>
@@ -1364,26 +1364,29 @@
                     <h3 class="block-title">Change Log</h3>
 
                     <div class="section-block">
+                      
+                      <p><b>2023, June, 08 - v 1.2.2</b></p>
+                      <ul class="simple-list">
+                        <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                        <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
+                        <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                        <li><b>- Updated:</b> Theme language/translation file.</li>
+                        <li><b>- Updated:</b> Theme documentation.</li>
+                      </ul>
 
                       <p>
-                        <b>2023, January, 05 - v 1.2.3</b>
+                        <b>2023, January, 05 - v 1.2.1</b>
                       </p>
 
                       <ul class="simple-list">
-
-                        <b>- Updated:</b>
-                        Theme for WP version 6.1.1</li>
-                      <li>
-                        <b>- Updated:</b>
+                        <li><b>- Updated:</b>Theme for WP version 6.1.1</li>
+                      <li><b>- Updated:</b>
                         WPBakery Page Builder to 6.10.0</li>
-                      <li>
-                        <b>- Updated:</b>
+                      <li><b>- Updated:</b>
                         Theme options panel.</li>
-                      <li>
-                        <b>- Updated:</b>
+                      <li><b>- Updated:</b>
                         Theme language/translation file.</li>
-                      <li>
-                        <b>- Updated:</b>
+                      <li><b>- Updated:</b>
                         Theme documentation.</li>
 
                     </ul>
@@ -1879,7 +1882,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <span>Copyright &copy; 2021 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
           </div>
           <div class="col-6 text-right">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
