--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -146,7 +146,7 @@
                   </nav>
                   <!--//nav-->
 
-                  <small><i>Doc Last Update:</i> 03/07/2023</small>
+                  <small><i>Doc Last Update:</i> 08/07/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -161,8 +161,8 @@
                   <h2 class="section-title">Theme's General Information</h2>
                   <div class="section-block">
                     <ul class="square-list">
-                      <li><strong>Version:</strong> 20230703-1.3.3</li>
-                      <li><strong>Recent Update:</strong> 03/07/2023</li>
+                      <li><strong>Version:</strong> 20230708-1.3.4</li>
+                      <li><strong>Recent Update:</strong> 08/07/2023</li>
                       <li><strong>Release Date:</strong> 20/05/2017</li>
                       <li><strong>Premium Support:</strong> <a href="https://themeforest.net/item/knowledgedesk-knowledge-base-wordpress-theme/19481432/support/contact" target="_blank">Send Message</a></li>
                       <li><strong>Theme Created By</strong> <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a> & <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a></li>
@@ -2131,7 +2131,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.2 to 1.3.3</b>
+                          <b>Upgrading from 1.3.3 to 1.3.4</b>
                         </p>
 
                         <ul>
@@ -2149,6 +2149,19 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <p><b>2023, July, 08 - v 1.3.4</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> BWl Knowledge Base Manager Plugin to 1.4.3</li>
+                          <li><b>- Updated:</b> KB Addon For WPBakery Page Builder to 1.1.0</li>
+                          <li><b>- Updated:</b> Ultimate Searchable Accordion - WPBakery Page Builder Addon 1.1.7</li>
+                          <li><b>- Removed:</b> "Custom Post Type Permalinks" dependency for the theme.</li>
+                          <li><b>- Fixed:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Fixed:</b> KB category and tag template layout.</li>
+                          <li><b>- Fixed:</b> Single Kb Page breadcurmb issue.</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
 
                         <p><b>2023, July, 03 - v 1.3.3</b></p>
                         <ul class="simple-list">
@@ -2798,7 +2811,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6 text-left">
-            <span>Copyright &copy; 2022 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
+            <span>Copyright &copy; 2023 - <a href="https://bluewindlab.net" target="_blank" class="text-info">BlueWindLab</a>. All Rights Reserved.</span>
           </div>
           <div class="col-6 text-right">
             <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can buy the commercial license via our website: themes.3rdwavemedia.com */-->
