update doc for version 1.3.4

--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -2156,9 +2156,9 @@
                           <li><b>- Updated:</b> KB Addon For WPBakery Page Builder to 1.1.0</li>
                           <li><b>- Updated:</b> Ultimate Searchable Accordion - WPBakery Page Builder Addon 1.1.7</li>
                           <li><b>- Removed:</b> "Custom Post Type Permalinks" dependency for the theme.</li>
-                          <li><b>- Fixed:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Fixed:</b> Theme compatibility with the latest WordPress version.</li>
                           <li><b>- Fixed:</b> KB category and tag template layout.</li>
-                          <li><b>- Fixed:</b> Single Kb Page breadcurmb issue.</li>
+                          <li><b>- Fixed:</b> Single Kb Page breadcrumb issue.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
@@ -2167,7 +2167,7 @@
                         <ul class="simple-list">
                           <li><b>- Updated:</b> BWl Knowledge Base Manager Plugin to 1.4.2</li>
                           <li><b>- Updated:</b> Ultimate Searchable Accordion - WPBakery Page Builder Addon 1.1.6</li>
-                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
@@ -2178,7 +2178,7 @@
                           <li><b>- Updated:</b> BWl Knowledge Base Manager Plugin to 1.4.1</li>
                           <li><b>- Updated:</b> Ultimate Searchable Accordion - WPBakery Page Builder Addon 1.1.6</li>
                           <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
-                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
