--- a/kdesk/index.html
+++ b/kdesk/index.html
@@ -146,7 +146,7 @@
                   </nav>
                   <!--//nav-->
 
-                  <small><i>Doc Last Update:</i> 11/07/2023</small>
+                  <small><i>Doc Last Update:</i> 13/07/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -161,8 +161,8 @@
                   <h2 class="section-title">Theme's General Information</h2>
                   <div class="section-block">
                     <ul class="square-list">
-                      <li><strong>Version:</strong> 20230711-1.3.5</li>
-                      <li><strong>Recent Update:</strong> 11/07/2023</li>
+                      <li><strong>Version:</strong> 20230713-1.3.6</li>
+                      <li><strong>Recent Update:</strong> 13/07/2023</li>
                       <li><strong>Release Date:</strong> 20/05/2017</li>
                       <li><strong>Premium Support:</strong> <a href="https://themeforest.net/item/knowledgedesk-knowledge-base-wordpress-theme/19481432/support/contact" target="_blank">Send Message</a></li>
                       <li><strong>Theme Created By</strong> <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a> & <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a></li>
@@ -2131,7 +2131,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.4 to 1.3.5</b>
+                          <b>Upgrading from 1.3.5 to 1.3.6</b>
                         </p>
 
                         <ul>
@@ -2149,6 +2149,13 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <p><b>2023, July, 13 - v 1.3.6</b></p>
+                        <ul class="simple-list">
+                          <li><b>- Updated:</b> BWl Knowledge Base Manager Plugin to 1.4.5</li>
+                          <li><b>- Updated:</b> Theme language/translation file.</li>
+                          <li><b>- Updated:</b> Theme documentation.</li>
+                        </ul>
 
                       <p><b>2023, July, 11 - v 1.3.5</b></p>
                         <ul class="simple-list">
