--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -149,7 +149,7 @@
 
                   <small>
                     <i>Doc Last Update:</i>
-                    04/06/2023</small>
+                    13/08/2023</small>
                 </nav>
                 <!--//doc-menu-->
               </div>
@@ -162,22 +162,12 @@
                   <h2 class="section-title">Theme's General Information</h2>
                   <div class="section-block">
                     <ul class="square-list">
-                      <li>
-                        <strong>Version:</strong>
-                        20230604-1.3.1</li>
-                      <li>
-                        <strong>Recent Update:</strong>
-                        04/06/2023</li>
-                      <li>
-                        <strong>Release Date:</strong>
-                        09/02/2018</li>
-                      <li>
-                        <strong>Premium Support:</strong>
-                        <a href="https://themeforest.net/item/sharai-khana-computer-service-center-wordpress-theme/21008758/support/contact">Send Message</a>
+                      <li><strong>Version:</strong> 20230813-1.3.2</li>
+                      <li><strong>Recent Update:</strong> 04/06/2023</li>
+                      <li><strong>Release Date:</strong> 09/02/2018</li>
+                      <li><strong>Premium Support:</strong> <a href="https://themeforest.net/item/sharai-khana-computer-service-center-wordpress-theme/21008758/support/contact">Send Message</a>
                       </li>
-                      <li>
-                        <strong>Created By</strong>
-                        <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a>
+                      <li><strong>Created By</strong> <a href="https://themeforest.net/user/xenioushk" target="_blank">MD MAHBUB ALAM KHAN</a>
                         &
                         <a href="https://themeforest.net/user/essentialwebapps" target="_blank">AFM JAMAL UDDIN</a>
                       </li>
@@ -3320,7 +3310,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.0 to 1.3.1</b>
+                          <b>Upgrading from 1.3.1 to 1.3.2</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your
@@ -3340,26 +3330,28 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
 
-                        <p>
-                          <b>2023, June, 08 - v 1.3.1</b>
-                        </p>
-                        <ul class="simple-list">
-                          <li>
-                            <b>- Updated:</b>
-                            WPBakery Page Builder to 6.13.0</li>
-                          <li>
-                            <b>- Updated:</b>
-                            WooCommerce product list page add to cart button.</li>
-                          <li>
-                            <b>- Updated:</b>
-                            Theme compatibility with the lastest WordPress version.</li>
-                          <li>
-                            <b>- Updated:</b>
-                            Theme language/translation file.</li>
-                          <li>
-                            <b>- Updated:</b>
-                            Theme documentation.</li>
-                        </ul>
+                        <div>
+                          <p><b>2023, August, 13 - v 1.3.2</b></p>
+                          <ul class="square-list">
+                            <li><b>Updated:</b> WPBakery Page Builder to 7.0</li>
+                            <li><b>Updated:</b> Sharia Khana VC Addon to 1.2.5</li>
+                            <li><b>Updated:</b> WooCommerce product list page add to cart button.</li>
+                            <li><b>Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>Updated:</b> Theme language/translation file.</li>
+                            <li><b>Updated:</b> Theme documentation.</li>
+                          </ul>
+                        </div>
+
+                        <div>
+                          <p><b>2023, June, 08 - v 1.3.1</b></p>
+                          <ul class="square-list">
+                            <li><b>Updated:</b> WPBakery Page Builder to 6.13.0</li>
+                            <li><b>Updated:</b> WooCommerce product list page add to cart button.</li>
+                            <li><b>Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>Updated:</b> Theme language/translation file.</li>
+                            <li><b>Updated:</b> Theme documentation.</li>
+                          </ul>
+                        </div>
 
                         <p>
                           <b>2023, January, 04 - v 1.3.0</b>
