update the srcare 1.3.3

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -138,7 +138,7 @@
                   </nav>
                   <small>
                     <i>Doc Last Update:</i>
-                    04/06/2023</small>
+                    21/08/2023</small>
                 </nav>
 
               </div>
@@ -153,9 +153,9 @@
                     <ul class="square-list">
                       <li>
                         <strong>Version:</strong>
-                        20230604-1.3.2</li>
+                        20230821-1.3.3</li>
                       <li>
-                        <strong>Recent Update:</strong>04/06/2023</li>
+                        <strong>Recent Update:</strong> 21/08/2023</li>
                       <li>
                         <strong>Release Date:</strong>
                         21/08/2018</li>
@@ -2672,7 +2672,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.1 to 1.3.2</b>
+                          <b>Upgrading from 1.3.2 to 1.3.3</b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your <strong>themes/senior-care</strong> folder.</li>
@@ -2689,6 +2689,17 @@
 
                     <div class="row">
                       <div class="col-md-12 col-12">
+
+                        <div>
+                          <p><b>2023, August, 21 - v 1.3.3</b></p>
+                          <ul class="simple-list">
+                            <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
+                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>- Updated:</b> Theme language/translation file.</li>
+                            <li><b>- Updated:</b> Theme documentation.</li>
+                          </ul>
+                      </div>
 
                         <p><b>2023, June, 18 - v 1.3.2</b></p>
                         <ul class="simple-list">
