update sharai khana doc 1.3.3

--- a/sharai_khana/index.html
+++ b/sharai_khana/index.html
@@ -3331,41 +3331,41 @@
                       <div class="col-md-12 col-12">
 
                         <div>
-                          <p><b>2023, August, 23 - v 1.3.3</b></p>
+                          <p><b>2023, August 23 - v 1.3.3</b></p>
                           <ul class="simple-list">
                             <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
                             <li><b>- Updated:</b> Sharia Khana VC Addon to 1.2.6</li>
-                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress (6.3.0) version.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the latest WordPress (6.3.0) version.</li>
                             <li><b>- Updated:</b> Theme language/translation file.</li>
                             <li><b>- Updated:</b> Theme documentation.</li>
                           </ul>
                         </div>
 
                         <div>
-                          <p><b>2023, August, 13 - v 1.3.2</b></p>
+                          <p><b>2023, August 13 - v 1.3.2</b></p>
                           <ul class="square-list">
                             <li><b>Updated:</b> WPBakery Page Builder to 7.0</li>
                             <li><b>Updated:</b> Sharia Khana VC Addon to 1.2.5</li>
                             <li><b>Updated:</b> WooCommerce product list page add to cart button.</li>
-                            <li><b>Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>Updated:</b> Theme compatibility with the latest WordPress version.</li>
                             <li><b>Updated:</b> Theme language/translation file.</li>
                             <li><b>Updated:</b> Theme documentation.</li>
                           </ul>
                         </div>
 
                         <div>
-                          <p><b>2023, June, 08 - v 1.3.1</b></p>
+                          <p><b>2023, June 08 - v 1.3.1</b></p>
                           <ul class="square-list">
                             <li><b>Updated:</b> WPBakery Page Builder to 6.13.0</li>
                             <li><b>Updated:</b> WooCommerce product list page add to cart button.</li>
-                            <li><b>Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>Updated:</b> Theme compatibility with the latest WordPress version.</li>
                             <li><b>Updated:</b> Theme language/translation file.</li>
                             <li><b>Updated:</b> Theme documentation.</li>
                           </ul>
                         </div>
 
                         <p>
-                          <b>2023, January, 04 - v 1.3.0</b>
+                          <b>2023, January 04 - v 1.3.0</b>
                         </p>
                         <ul class="simple-list">
                           <li>
@@ -3388,7 +3388,7 @@
                       </ul>
 
                       <p>
-                        <b>2022, June, 08 - v 1.2.9</b>
+                        <b>2022, June 08 - v 1.2.9</b>
                       </p>
                       <ul class="simple-list">
                         <li>
@@ -3412,7 +3412,7 @@
                       </ul>
 
                       <p>
-                        <b>2022, January, 01 - v 1.2.8</b>
+                        <b>2022, January 01 - v 1.2.8</b>
                       </p>
                       <ul class="simple-list">
                         <li>
@@ -3430,7 +3430,7 @@
                       </ul>
 
                       <p>
-                        <b>2021, August, 30 - v 1.2.7</b>
+                        <b>2021, August 30 - v 1.2.7</b>
                         <br/><b>- Added:
                         </b>
                         Option to display mobile menu before logo.
@@ -3444,7 +3444,7 @@
                       </p>
 
                       <p>
-                        <b>2021, July, 23 - v 1.2.6</b>
+                        <b>2021, July 23 - v 1.2.6</b>
                         <li>
                           <b>- Updated:</b>
                           WPBakery Page Builder to 6.7.0
@@ -3455,7 +3455,7 @@
                       </p>
 
                       <p>
-                        <b>2021, May, 07 - v 1.2.5</b>
+                        <b>2021, May 07 - v 1.2.5</b>
                         <br/><b>- Updated:</b>
                         Redux Options Panel Warning Notice.
                         <br/><b>- Updated:</b>
@@ -3465,21 +3465,21 @@
                       </p>
 
                       <p>
-                        <b>2021, March, 17 - v 1.2.4</b>
+                        <b>2021, March 17 - v 1.2.4</b>
                         <br/>- Updated WPBakery Page Builder to 6.6.0
                         <br/>- Update theme Sharia Khana VC Addon to 1.2.2
                         <br/>- Updated documentation.
                       </p>
 
                       <p>
-                        <b>2021, January, 24 - v 1.2.3</b>
+                        <b>2021, January 24 - v 1.2.3</b>
                         <br/>- Updated WPBakery Page Builder to 6.5.0
                         <br/>- Update theme Sharia Khana VC Addon to 1.2.1
                         <br/>- Updated documentation.
                       </p>
 
                       <p>
-                        <b>2020, December, 02 - v 1.2.2</b>
+                        <b>2020, December 02 - v 1.2.2</b>
                         <br/>- Updated WPBakery Page Builder to 6.4.2
                         <br/>- Updated documentation.
                       </p>
@@ -3498,7 +3498,7 @@
                       </p>
 
                       <p>
-                        <b>2020, March, 18 - v 1.1.9</b>
+                        <b>2020, March 18 - v 1.1.9</b>
                         <br/><i>- Fixed Search Box Widget Button Issue.
                         </i>
                         <br/><i>- Fixed 404 Page Warning Message.
@@ -3509,7 +3509,7 @@
                       </p>
 
                       <p>
-                        <b>2020, January, 03 - v 1.1.8</b>
+                        <b>2020, January 03 - v 1.1.8</b>
                         <br/><i>- Updated WPBakery Page Builder to 6.1</i>
                         <br/><i>- Update Sharia Khana VC Addon.
                         </i>
@@ -3517,20 +3517,20 @@
                       </p>
 
                       <p>
-                        <b>2019, September, 03 - v 1.1.7</b>
+                        <b>2019, September 03 - v 1.1.7</b>
                         <br/><i>- Updated WPBakery Page Builder to 6.0.5</i>
                         <br/><i>- Updated Documentation.</i>
                       </p>
 
                       <p>
-                        <b>2019, June, 19 - v 1.1.6
+                        <b>2019, June 19 - v 1.1.6
                         </b>
                         <br/><i>- Updated WPBakery Page Builder to 6.0.3</i>
                         <br/><i>- Updated Documentation.</i>
                       </p>
 
                       <p>
-                        <b>2019, May, 19 - v 1.1.5
+                        <b>2019, May 19 - v 1.1.5
                         </b>
                         <br/><i>- Updated WPBakery Page Builder to 6.0.2</i>
                         <br/><i>- Updated WooCommerce Templates.
@@ -3577,7 +3577,7 @@
                       </p>
 
                       <p>
-                        <b>2019, January, 29 - v 1.1.0
+                        <b>2019, January 29 - v 1.1.0
                         </b>
                         <br/><i>- Updated Theme Menu.</i>
                         <br/><i>- Updated Theme Option Panel.</i>
@@ -3588,7 +3588,7 @@
                       </p>
 
                       <p>
-                        <b>2018, December, 23 - v 1.0.9
+                        <b>2018, December 23 - v 1.0.9
                         </b>
                         <br/><i>- Updated WPBakery Page Builder to 5.6
                         </i>
@@ -3598,7 +3598,7 @@
                       </p>
 
                       <p>
-                        <b>2018, November, 07 - v 1.0.8
+                        <b>2018, November 07 - v 1.0.8
                         </b>
                         <br/><i>- Updated WPBakery Page Builder to 5.5.5
                         </i>
@@ -3611,7 +3611,7 @@
                       </p>
 
                       <p>
-                        <b>2018, September, 22 - v 1.0.7
+                        <b>2018, September 22 - v 1.0.7
                         </b>
                         <br/><i>- Updated Visaul Composer to 5.5.4.
                         </i>
@@ -3622,7 +3622,7 @@
                       </p>
 
                       <p>
-                        <b>2018, August, 04 - v 1.0.6
+                        <b>2018, August 04 - v 1.0.6
                         </b>
                         <br/><i>- Added New Demo For Computer & Laptop Repair Service.</i>
                         <br/><i>- Fixed bottom margin issue for counter, process, team, service block.</i>
@@ -3644,7 +3644,7 @@
                       </p>
 
                       <p>
-                        <b>2018, June, 29 - v 1.0.5
+                        <b>2018, June 29 - v 1.0.5
                         </b>
                         <br/><i>- Update theme Sharia Khana VC Addon.
                         </i>
@@ -3655,7 +3655,7 @@
                       </p>
 
                       <p>
-                        <b>2018, May, 25 - v 1.0.4
+                        <b>2018, May 25 - v 1.0.4
                         </b>
                         <br/><i>- Update theme Sharia Khana VC Addon.
                         </i>
@@ -3665,7 +3665,7 @@
                       </p>
 
                       <p>
-                        <b>2018, May, 12 - v 1.0.3
+                        <b>2018, May 12 - v 1.0.3
                         </b>
                         <br/><i>- Added Second Menu Layout.</i>
                         <br/><i>- Added One Page Menu Layout.</i>
@@ -3690,7 +3690,7 @@
                       </p>
 
                       <p>
-                        <b>2018, March, 24 - v 1.0.2
+                        <b>2018, March 24 - v 1.0.2
                         </b>
                         <br/><i>- Update theme Sharia Khana VC Addon.
                         </i>
@@ -3700,7 +3700,7 @@
                       </p>
 
                       <p>
-                        <b>2018, March, 10 - v 1.0.1
+                        <b>2018, March 10 - v 1.0.1
                         </b>
                         <br/><i>- Updated WP Bakery Page Builder to 5.4.7.
                         </i>
@@ -3717,7 +3717,7 @@
                       </p>
 
                       <p>
-                        <b>2017, August, 21 - v 1.0.0
+                        <b>2017, August 21 - v 1.0.0
                         </b>
                         <br/><i>- Initial release</i>
                       </p>
