update senior care  doc

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -2691,34 +2691,34 @@
                       <div class="col-md-12 col-12">
 
                         <div>
-                          <p><b>2023, August, 21 - v 1.3.3</b></p>
+                          <p><b>2023, August 21 - v 1.3.3</b></p>
                           <ul class="simple-list">
                             <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
                             <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
-                            <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                            <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
                             <li><b>- Updated:</b> Theme language/translation file.</li>
                             <li><b>- Updated:</b> Theme documentation.</li>
                           </ul>
                       </div>
 
-                        <p><b>2023, June, 18 - v 1.3.2</b></p>
+                        <p><b>2023, June 18 - v 1.3.2</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
                           <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
-                          <li><b>- Updated:</b> Theme compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2022, December, 18 - v 1.3.1</b></p>
+                        <p><b>2022, December 18 - v 1.3.1</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WooCommerce Product Search Page.</li>
-                          <li><b>- Updated:</b> Theme and addon scripts to improve Compatibility with the lastest WordPress version.</li>
+                          <li><b>- Updated:</b> Theme and addon scripts to improve Compatibility with the latest WordPress version.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2022, October, 17 - v 1.3.0</b></p>
+                        <p><b>2022, October 17 - v 1.3.0</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.10.0</li>
                           <li><b>- Fixed:</b> Theme options panel menu position issue.</li>
@@ -2726,7 +2726,7 @@
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2022, May, 04 - v 1.2.9</b></p>
+                        <p><b>2022, May 04 - v 1.2.9</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.9.0</li>
                           <li><b>- Updated:</b> Theme options panel.</li>
@@ -2734,7 +2734,7 @@
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2022, January, 01 - v 1.2.8</b></p>
+                        <p><b>2022, January 01 - v 1.2.8</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.8.0</li>
                           <li><b>- Updated:</b> Theme options panel.</li>
@@ -2742,7 +2742,7 @@
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2021, July, 19 - v 1.2.7</b></p>
+                        <p><b>2021, July 19 - v 1.2.7</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.7.0</li>
                           <li><b>- Updated:</b> Theme options panel.</li>
@@ -2750,7 +2750,7 @@
                           <li><b>- Updated:</b> Theme documentation.</li>
                         </ul>
 
-                        <p><b>2021, July, 19 - v 1.2.7</b></p>
+                        <p><b>2021, July 19 - v 1.2.7</b></p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> Redux Options Panel Warning Notice.</li>
                           <li><b>- Updated:</b> Theme language/translation file.</li>
@@ -2758,7 +2758,7 @@
                         </ul>
 
                         <p>
-                          <b>2021, March, 12 - v 1.2.5</b>
+                          <b>2021, March 12 - v 1.2.5</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.6.0</li>
@@ -2767,7 +2767,7 @@
                         </ul>
 
                         <p>
-                          <b>2021, January, 24 - v 1.2.4</b>
+                          <b>2021, January 24 - v 1.2.4</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.5.0</li>
@@ -2777,7 +2777,7 @@
                         </ul>
 
                         <p>
-                          <b>2020, December, 01 - v 1.2.3</b>
+                          <b>2020, December 01 - v 1.2.3</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.4.2</li>
@@ -2787,7 +2787,7 @@
                         </ul>
 
                         <p>
-                          <b>2020, October, 04 - v 1.2.2</b>
+                          <b>2020, October 04 - v 1.2.2</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.4.1</li>
@@ -2806,7 +2806,7 @@
                         </ul>
 
                         <p>
-                          <b>2020, July, 20 - v 1.2.0</b>
+                          <b>2020, July 20 - v 1.2.0</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> Sr Care VC Addon 1.2.0</li>
@@ -2826,7 +2826,7 @@
                         </ul>
 
                         <p>
-                          <b>2020, March, 15 - v 1.1.8</b>
+                          <b>2020, March 15 - v 1.1.8</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Fixed:</b> Search Box Widget Button Issue.</li>
@@ -2836,7 +2836,7 @@
                         </ul>
 
                         <p>
-                          <b>2020, January, 25 - v 1.1.7</b>
+                          <b>2020, January 25 - v 1.1.7</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.1</li>
@@ -2847,7 +2847,7 @@
                         </ul>
 
                         <p>
-                          <b>2019, August, 18 - v 1.1.6 </b>
+                          <b>2019, August 18 - v 1.1.6 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Fixed:</b> Reponsive Issue For Mobile Screen.</li>
@@ -2860,7 +2860,7 @@
                         </ul>
 
                         <p>
-                          <b>2019, June, 19 - v 1.1.5 </b>
+                          <b>2019, June 19 - v 1.1.5 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.0.3</li>
@@ -2869,7 +2869,7 @@
                         </ul>
 
                         <p>
-                          <b>2019, May, 19 - v 1.1.4</b>
+                          <b>2019, May 19 - v 1.1.4</b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 6.0.2</li>
@@ -2879,7 +2879,7 @@
                         </ul>
 
                         <p>
-                          <b>2019, March, 08 - v 1.1.3 </b>
+                          <b>2019, March 08 - v 1.1.3 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> Theme Srcare VC Addon.</li>
@@ -2910,7 +2910,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, December, 25 - v 1.1.0 </b>
+                          <b>2018, December 25 - v 1.1.0 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 5.6</li>
@@ -2920,7 +2920,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, November, 07 - v 1.0.9 </b>
+                          <b>2018, November 07 - v 1.0.9 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder to 5.5.5</li>
@@ -2943,7 +2943,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, July, 10 - v 1.0.7 </b>
+                          <b>2018, July 10 - v 1.0.7 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Fixed:</b> Faq title background issue.</li>
@@ -2955,7 +2955,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, June, 29 - v 1.0.6 </b>
+                          <b>2018, June 29 - v 1.0.6 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Fixed:</b> Service box title issue.</li>
@@ -2967,7 +2967,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, June, 01 - v 1.0.5 </b>
+                          <b>2018, June 01 - v 1.0.5 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> Theme Mobile Menu.</li>
@@ -3002,7 +3002,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, March, 10 - v 1.0.2 </b>
+                          <b>2018, March 10 - v 1.0.2 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Added:</b> Option to change footer widget title separator and icon color.</li>
@@ -3017,7 +3017,7 @@
                         </ul>
 
                         <p>
-                          <b>2018, January, 16 - v 1.0.1 </b>
+                          <b>2018, January 16 - v 1.0.1 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Updated:</b> WPBakery Page Builder 5.4.5</li>
@@ -3028,7 +3028,7 @@
                         </ul>
 
                         <p>
-                          <b>2017, August, 21 - v 1.0.0 </b>
+                          <b>2017, August 21 - v 1.0.0 </b>
                         </p>
                         <ul class="simple-list">
                           <li><b>- Initial release</b></li>
