--- a/wish/index.html
+++ b/wish/index.html
@@ -2095,7 +2095,7 @@
                       <p><b>2023, August 21 - v 1.2.1</b></p>
                       <ul class="simple-list">
                         <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>                        
-                        <li><b>- Updated:</b> Wizard WPBakery Page Builder Addons to 1.1.6</li>
+                        <li><b>- Updated:</b> Wish WPBakery Page Builder Addons to 1.1.6</li>
                         <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
                         <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
                         <li><b>- Updated:</b> Theme language/translation file.</li>
