update the srcare docs

--- a/srcare/index.html
+++ b/srcare/index.html
@@ -138,7 +138,7 @@
                   </nav>
                   <small>
                     <i>Doc Last Update:</i>
-                    21/08/2023</small>
+                    <span class="update">21/08/2023</span></small>
                 </nav>
 
               </div>
@@ -152,10 +152,9 @@
                   <div class="section-block">
                     <ul class="square-list">
                       <li>
-                        <strong>Version:</strong>
-                        20230821-1.3.3</li>
+                        <strong>Version:</strong><span class="ver">1.3.3</span></li>
                       <li>
-                        <strong>Recent Update:</strong> 21/08/2023</li>
+                        <strong>Recent Update:</strong> <span class="update">21/08/2023</span></li>
                       <li>
                         <strong>Release Date:</strong>
                         21/08/2018</li>
@@ -2672,7 +2671,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
                         <p>
-                          <b>Upgrading from 1.3.2 to 1.3.3</b>
+                          <b>Upgrading to version <span class="ver">1.3.3</span></b>
                         </p>
                         <ul>
                           <li>Replace all files and directories in your <strong>themes/senior-care</strong> folder.</li>
@@ -2690,41 +2689,7 @@
                     <div class="row">
                       <div class="col-md-12 col-12">
 
-                        <div>
-                          <p><b>2023, August 21 - v 1.3.3</b></p>
-                          <ul class="simple-list">
-                            <li><b>- Updated:</b> WPBakery Page Builder to 7.0</li>
-                            <li><b>- Updated:</b> Fixed the translation issue of 404 page.</li>
-                            <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
-                            <li><b>- Updated:</b> Theme language/translation file.</li>
-                            <li><b>- Updated:</b> Theme documentation.</li>
-                          </ul>
-                      </div>
-
-                        <p><b>2023, June 18 - v 1.3.2</b></p>
-                        <ul class="simple-list">
-                          <li><b>- Updated:</b> WPBakery Page Builder to 6.13.0</li>
-                          <li><b>- Updated:</b> WooCommerce product list page add to cart button.</li>
-                          <li><b>- Updated:</b> Theme compatibility with the latest WordPress version.</li>
-                          <li><b>- Updated:</b> Theme language/translation file.</li>
-                          <li><b>- Updated:</b> Theme documentation.</li>
-                        </ul>
-
-                        <p><b>2022, December 18 - v 1.3.1</b></p>
-                        <ul class="simple-list">
-                          <li><b>- Updated:</b> WooCommerce Product Search Page.</li>
-                          <li><b>- Updated:</b> Theme and addon scripts to improve Compatibility with the latest WordPress version.</li>
-                          <li><b>- Updated:</b> Theme language/translation file.</li>
-                          <li><b>- Updated:</b> Theme documentation.</li>
-                        </ul>
-
-                        <p><b>2022, October 17 - v 1.3.0</b></p>
-                        <ul class="simple-list">
-                          <li><b>- Updated:</b> WPBakery Page Builder to 6.10.0</li>
-                          <li><b>- Fixed:</b> Theme options panel menu position issue.</li>
-                          <li><b>- Updated:</b> Theme language/translation file.</li>
-                          <li><b>- Updated:</b> Theme documentation.</li>
-                        </ul>
+                        <div id="dynamic_log"></div>
 
                         <p><b>2022, May 04 - v 1.2.9</b></p>
                         <ul class="simple-list">
@@ -3432,5 +3397,6 @@
     <!-- Main Javascript -->
     <script type="text/javascript" src="assets/js/all.min.js"></script>
     <script type="text/javascript" src="assets/js/main.js"></script>
+    <script type="text/javascript" src="assets/js/changelog.js"></script>
   </body>
 </html>
